# pitch_sitch_predictch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/wrap-session/: SKILL.md
artifacts/: README.md
artifacts/dashboards/: high_confidence_ge65.html  high_confidence_ge75.html
artifacts/diagnostics/: README.md
artifacts/experiments/: README.md
artifacts/experiments/20260713-mlp-seed-ensemble-v1/: config.json  data_summary.json  metrics.json  predictions.parquet  run_info.json
artifacts/splits/: README.md
notes/: current-state.md  decisions.md  research-log.md
notes/sessions/: 000-project-framing.md  001-gausman-first-models.md  002-mlp-ensemble.md  003-richness-bat-tracking-and-timing-pause.md
pitch_sitch/: artifacts.py  baseline.py  design_matrix.py  evaluation.py  explain.py  features.py  labels.py  mlp.py  models.py  sequence_features.py  sequence_pipeline.py  split.py  workload_features.py
scripts/: analyze_ensemble_confidence.py  audit_pitcher.py  diagnose_fs_by_count.py  diagnose_residual_interactions.py  inspect_high_confidence_predictions.py  inspect_logistic_baseline.py  inspect_slider_discrimination.py  make_split.py  plot_model_performance_figures.py  report_pitch_distribution.py  run_baseline.py  run_bat_tracking_experiment.py  run_batter_hand_experiment.py  run_class_weight_sweep.py  run_interaction_experiment.py  run_logistic_baseline.py  run_mlp_ensemble.py  run_mlp_experiment.py  run_prev_depth_richness_experiment.py  run_sequence_features.py  run_split_stability_check.py  run_workload_experiments.py  walkthrough_game.py
